--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ theme = "hugo-minimalist-theme"
     location = "Mercyhurst University"
     # Link custom assets relative to /static
     avatar = "img/profile-image.png"
-    header_background = "img/desk.jpg"
+    header_background = "img/Erie.jpg"
     header_title = "Ryan's Blog"
     copyright = "Powered by [Hugo](http://gohugo.io)."
     custom_css = []
